GNOME Bugzilla – Bug 692834
[PATCH] languages: Don't g_warning if there's no locale archive
Last modified: 2013-01-30 14:05:54 UTC
Created attachment 234776 [details] [review] 0001-languages-Don-t-g_warning-if-there-s-no-locale-archi.patch glibc supports both a mmapped database and subdirectories; currently we g_warning if the mmapped database doesn't exist. Don't do that, since e.g. gnome-ostree (derived from OpenEmbedded) uses subdirectories. See http://lists.freedesktop.org/archives/systemd-devel/2013-January/007957.html
Review of attachment 234776 [details] [review]: Looks fine. Please remove the trailing whitespace before pushing though.