languages: Don't g_warning if there's no locale archive

glibc supports both a mmapped database and subdirectories; currently
we g_warning if the mmapped database doesn't exist.  Don't do that,
since e.g. gnome-ostree (derived from OpenEmbedded) uses
subdirectories.

See http://lists.freedesktop.org/archives/systemd-devel/2013-January/007957.html

https://bugzilla.gnome.org/show_bug.cgi?id=692834